tests/e2e/greater_rewrite.error
Error: syntax error in story at line 2, column 10

2|    a = not (1 <= 2)
               ^

E0041: `1` is not allowed here
